# ot-harjoitustyo

./: .coverage  .coveragerc  .gitignore  .pylintrc  .ui_test.py.swp  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  määrittelydokumentti.md  testausdokumentti.md  tyoaikakirjanpito  tyoaikakirjanpito.md
dokumentaatio/kuvat/: luokka_pakkauskaavio
htmlcov/: _home_kazlindh__cache_pypoetry_virtualenvs_ot-harjoitustyo-20oRmmYV-py3_8_lib_python3_8_site-packages__pytest___init___py.html  _home_kazlindh__cache_pypoetry_virtualenvs_ot-harjoitustyo-20oRmmYV-py3_8_lib_python3_8_site-packages__pytest__argcomplete_py.html  _home_kazlindh__cache_pypoetry_virtualenvs_ot-harjoitustyo-20oRmmYV-py3_8_lib_python3_8_site-packages__pytest__code___init___py.html  _home_kazlindh__cache_pypoetry_virtualenvs_ot-harjoitustyo-20oRmmYV-py3_8_lib_python3_8_site-packages__pytest__code_code_py.html  _home_kazlindh__cache_pypoetry_virtualenvs_ot-harjoitustyo-20oRmmYV-py3_8_lib_python3_8_site-packages__pytest__code_source_py.html  _home_kazlindh__cache_pypoetry_virtualenvs_ot-harjoitustyo-20oRmmYV-py3_8_lib_python3_8_site-packages__pytest__io___init___py.html  _home_kazlindh__cache_pypoetry_virtualenvs_ot-harjoitustyo-20oRmmYV-py3_8_lib_python3_8_site-packages__pytest__io_saferepr_py.html  _home_kazlindh__cache_pypoetry_virtualenvs_ot-harjoitustyo-20oRmmYV-py3_8_lib_python3_8_site-packages__pytest__io_terminalwriter_py.html  (+93 more)
laskarit/viikko2/maksukortti/src/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
src/: .coverage  app.py  index.py
(+21 files in other folders)
